[gd_scene load_steps=54 format=3 uid="uid://dos2jeeu6b7a2"]

[ext_resource type="Script" path="res://Prefabs/SimpleNPC.gd" id="1_oovj6"]
[ext_resource type="PackedScene" uid="uid://cdtjqyr2ka37j" path="res://Prefabs/UI/EntityHPBar.tscn" id="3_2src0"]
[ext_resource type="Script" path="res://addons/StateMachine/StateMachine.gd" id="4_w15vy"]
[ext_resource type="Script" path="res://addons/StateMachine/States/EnemyIdle.gd" id="5_knyxa"]
[ext_resource type="Script" path="res://addons/StateMachine/States/EnemyChase.gd" id="6_5fcwj"]
[ext_resource type="Script" path="res://addons/StateMachine/States/NPCWalkTo.gd" id="6_g1pej"]
[ext_resource type="Script" path="res://addons/StateMachine/States/NPCAlert.gd" id="7_6omwl"]
[ext_resource type="Script" path="res://addons/StateMachine/States/NPCFlee.gd" id="8_ybcv2"]
[ext_resource type="Script" path="res://addons/StateMachine/States/NPCHurt.gd" id="9_tprfg"]
[ext_resource type="Material" uid="uid://ll62h1hqidlw" path="res://Materials/NPCMaterial.tres" id="9_uj6yg"]
[ext_resource type="ArrayMesh" uid="uid://bvg7xrnybfofm" path="res://Models/Characters/NPCs/NPCMeshes/MaleBaseMesh.tres" id="10_8lxbx"]
[ext_resource type="Script" path="res://addons/StateMachine/States/EntityRagdoll.gd" id="10_o1tkb"]
[ext_resource type="Animation" uid="uid://b0ovm48like5u" path="res://Models/Characters/NPCs/Flee.res" id="12_n1q67"]
[ext_resource type="Animation" uid="uid://cwwmpo78dgs0t" path="res://Models/Characters/NPCs/Scared.res" id="13_1ipf5"]
[ext_resource type="ArrayMesh" uid="uid://b4g0qoy5dae1h" path="res://Models/Characters/NPCs/NPCHairMeshes/RoughnTuff.res" id="13_80e4s"]
[ext_resource type="Animation" uid="uid://d021cfh30xv7t" path="res://Models/Characters/NPCs/Walk.res" id="14_gtsfu"]
[ext_resource type="Script" path="res://Prefabs/NPCs/FleeRange.gd" id="14_jy07k"]
[ext_resource type="Animation" uid="uid://uogxxta0srjl" path="res://Models/Characters/NPCs/Walk_Holding.res" id="15_xrfnd"]
[ext_resource type="Animation" uid="uid://fg7ggpbkl7nj" path="res://Models/Characters/NPCs/TPose.res" id="16_tvsk0"]
[ext_resource type="Animation" uid="uid://d07yfmvxf8bi" path="res://Models/Characters/NPCs/Hurt1.res" id="19_t3ole"]
[ext_resource type="Animation" uid="uid://b68soi8dd8d08" path="res://Models/Characters/NPCs/Hurt2.res" id="20_p0rji"]
[ext_resource type="Animation" uid="uid://b662yfs5mcyrw" path="res://Models/Characters/NPCs/Hurt3.res" id="21_w7gre"]
[ext_resource type="Animation" uid="uid://umtb1v50mirs" path="res://Models/Characters/NPCs/Hurt4.res" id="22_ln588"]
[ext_resource type="Animation" uid="uid://cmtlvotajyx" path="res://Models/Characters/NPCs/Ragdoll.res" id="24_5shb8"]
[ext_resource type="Animation" uid="uid://cxm37y3tc0p6k" path="res://Models/Characters/NPCs/Grabbed.res" id="25_4heod"]
[ext_resource type="Script" path="res://Prefabs/RandomAudioPlayer3d.gd" id="26_ex1dr"]
[ext_resource type="AudioStream" uid="uid://c1imv7670fc4d" path="res://Sounds/sfx_spin1.wav" id="27_stlt4"]
[ext_resource type="AudioStream" uid="uid://n311l2wlkeix" path="res://Sounds/sfx_spin2.wav" id="28_41iav"]
[ext_resource type="AudioStream" uid="uid://ce824wpbnd8xn" path="res://Sounds/sfx_spin3.wav" id="29_k2c3l"]
[ext_resource type="Script" path="res://addons/CustomEvents/SquibReleaseEvent.gd" id="30_0f8pe"]
[ext_resource type="AudioStream" uid="uid://b43g8q4bvs4vw" path="res://Sounds/sfx_fleshy_break.wav" id="30_uffqt"]
[ext_resource type="AudioStream" uid="uid://cheklqsj1jeuo" path="res://Sounds/sfx_fleshy_break2.wav" id="31_otsab"]
[ext_resource type="AudioStream" uid="uid://dc3tn61dll00h" path="res://Sounds/sfx_fleshy_break3.wav" id="32_76eov"]
[ext_resource type="AudioStream" uid="uid://qrfj4pdq21cg" path="res://Sounds/sfx_fleshy_break_3.wav" id="33_gduxe"]
[ext_resource type="AudioStream" uid="uid://ene58qop2wb0" path="res://Sounds/sfx_npc/sfx_npcs_death_01.wav" id="34_xe3q5"]
[ext_resource type="AudioStream" uid="uid://cqub6gddnikuf" path="res://Sounds/sfx_npc/sfx_npcs_death_02.wav" id="35_xp2ty"]
[ext_resource type="AudioStream" uid="uid://bhv6fthmufmp5" path="res://Sounds/sfx_npc/sfx_npcs_death_03.wav" id="36_3sbbo"]
[ext_resource type="AudioStream" uid="uid://duo8ceg0fsb6f" path="res://Sounds/sfx_npc/sfx_npcs_death_04.wav" id="37_3inc4"]
[ext_resource type="AudioStream" uid="uid://dpf34dslq3b60" path="res://Sounds/sfx_npc/sfx_npc_death_05.wav" id="38_86fnk"]
[ext_resource type="AudioStream" uid="uid://c4hlj6imsfv7t" path="res://Sounds/sfx_npc/sfx_npc_male_hurt1.wav" id="39_l8b85"]
[ext_resource type="AudioStream" uid="uid://3ris1hvd5a7v" path="res://Sounds/sfx_npc/sfx_npc_male_hurt2.wav" id="40_qaada"]
[ext_resource type="AudioStream" uid="uid://cqtjn0bhsy8he" path="res://Sounds/sfx_npc/sfx_npc_male_hurt3.wav" id="41_3yye4"]
[ext_resource type="AudioStream" uid="uid://qmdepn5ptdyt" path="res://Sounds/sfx_npc/sfx_npc_male_hurt4.wav" id="42_0pw48"]
[ext_resource type="AudioStream" uid="uid://ljyj37gl8iey" path="res://Sounds/sfx_npc/sfx_npc_female_hurt1.wav" id="43_2msmt"]
[ext_resource type="AudioStream" uid="uid://bko1dkcstn8bl" path="res://Sounds/sfx_npc/sfx_npc_female_hurt2.wav" id="44_dvwc3"]
[ext_resource type="AudioStream" uid="uid://bqmp2xgtu00bn" path="res://Sounds/sfx_npc/sfx_npc_female_hurt3.wav" id="45_631kg"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_f0alc"]
bounce = 0.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pdml2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nhbyk"]
radius = 10.0

[sub_resource type="SphereShape3D" id="SphereShape3D_rjim7"]
radius = 2.02078

[sub_resource type="Skin" id="Skin_0j7qo"]
resource_name = "Skin"
bind_count = 12
bind/0/name = &"Pelvis"
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, -2.38419e-07, 0, 1, 0, 2.38419e-07, 0, 1, 0, 0.115944, 0)
bind/1/name = &"Leg.L"
bind/1/bone = -1
bind/1/pose = Transform3D(4.37114e-08, 0, -1, 0, -1, 0, -1, 0, -4.37114e-08, 0.143152, -0.117899, 6.25739e-09)
bind/2/name = &"Shin.L"
bind/2/bone = -1
bind/2/pose = Transform3D(7.54149e-08, -0.0258959, -0.999665, 0, -0.999665, 0.0258959, -1, -1.95293e-09, -7.53896e-08, 0.123663, -0.754205, 9.32603e-09)
bind/3/name = &"Leg.R"
bind/3/bone = -1
bind/3/pose = Transform3D(4.37114e-08, 0, -1, 0, -1, 0, -1, 0, -4.37114e-08, -0.159996, -0.117899, -6.99364e-09)
bind/4/name = &"Shin.R"
bind/4/bone = -1
bind/4/pose = Transform3D(7.54542e-08, 0.0231701, -0.999732, -1.11022e-16, -0.999732, -0.0231701, -1, 1.74828e-09, -7.54339e-08, -0.142558, -0.754255, -1.07566e-08)
bind/5/name = &"Waist"
bind/5/bone = -1
bind/5/pose = Transform3D(1, 0, -2.38419e-07, 0, 1, 0, 2.38419e-07, 0, 1, 0, 0.0675129, 0)
bind/6/name = &"Torso"
bind/6/bone = -1
bind/6/pose = Transform3D(1, 0, -2.38419e-07, 0, 1, 0, 2.38419e-07, 0, 1, 0, -0.233915, 0)
bind/7/name = &"Arm.L"
bind/7/bone = -1
bind/7/pose = Transform3D(3.14354e-07, -0.0763707, -0.99708, -6.51754e-07, -0.99708, 0.0763708, -0.999992, -2.72713e-08, -3.12747e-07, 0.46871, 0.738586, 1.49578e-07)
bind/8/name = &"Arm.L.001"
bind/8/bone = -1
bind/8/pose = Transform3D(-0.012868, 0.0312138, -0.99943, 0.22994, -0.972633, -0.0333375, -0.973111, -0.230241, 0.00533866, 0.443373, 0.253696, 0.054084)
bind/9/name = &"Arm.R"
bind/9/bone = -1
bind/9/pose = Transform3D(-6.43767e-08, 0.0869824, -0.996209, 0.0179122, -0.99605, -0.0869687, -0.999825, -0.0178422, -0.00156388, -0.446319, 0.74983, 0.0120663)
bind/10/name = &"Arm.R.001"
bind/10/bone = -1
bind/10/pose = Transform3D(0.0100089, -0.0656031, -0.997795, 0.182969, -0.980879, 0.0663268, -0.983053, -0.18323, 0.00217997, -0.407548, 0.280826, 0.0563661)
bind/11/name = &"Head"
bind/11/bone = -1
bind/11/pose = Transform3D(1, 0, -2.38419e-07, 0, 1, 0, 2.38419e-07, 0, 1, 0, -0.880314, 0)

[sub_resource type="Animation" id="Animation_sfer8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 7.85398, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_icehg"]
_data = {
"Flee": ExtResource("12_n1q67"),
"Grabbed": ExtResource("25_4heod"),
"Hurt1": ExtResource("19_t3ole"),
"Hurt2": ExtResource("20_p0rji"),
"Hurt3": ExtResource("21_w7gre"),
"Hurt4": ExtResource("22_ln588"),
"RESET": SubResource("Animation_sfer8"),
"Ragdoll": ExtResource("24_5shb8"),
"Scared": ExtResource("13_1ipf5"),
"TPose": ExtResource("16_tvsk0"),
"Walk": ExtResource("14_gtsfu"),
"Walk_Holding": ExtResource("15_xrfnd")
}

[node name="SimpleNPC" type="RigidBody3D"]
collision_layer = 5
physics_material_override = SubResource("PhysicsMaterial_f0alc")
script = ExtResource("1_oovj6")
rideHeight = 1.4
entity_type = "npc"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.379182, 0)
shape = SubResource("CapsuleShape3D_pdml2")

[node name="EntityHPBar" parent="." instance=ExtResource("3_2src0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87884, 0)

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -1.5, 0)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_w15vy")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_knyxa")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("6_5fcwj")

[node name="WalkTo" type="Node" parent="StateMachine"]
script = ExtResource("6_g1pej")

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource("7_6omwl")

[node name="Flee" type="Node" parent="StateMachine"]
script = ExtResource("8_ybcv2")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("9_tprfg")

[node name="Ragdoll" type="Node" parent="StateMachine"]
script = ExtResource("10_o1tkb")

[node name="Timer" type="Timer" parent="StateMachine/Ragdoll"]
one_shot = true

[node name="AggroRange" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 2
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AggroRange"]
shape = SubResource("SphereShape3D_nhbyk")

[node name="FleeRange" type="CharacterBody3D" parent="."]
collision_layer = 128
collision_mask = 0
script = ExtResource("14_jy07k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FleeRange"]
shape = SubResource("SphereShape3D_rjim7")

[node name="flee_panic_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MeshContainer" type="Node3D" parent="."]
transform = Transform3D(1.56958e-06, 0, 1, 0, 1, 0, -1, 0, 1.56958e-06, 0, -1.13829, 0)

[node name="Armature" type="Node3D" parent="MeshContainer"]

[node name="Skeleton3D" type="Skeleton3D" parent="MeshContainer/Armature"]
bones/0/name = "Pelvis"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 2.38419e-07, 0, 1, 0, -2.38419e-07, 0, 1, 0, -0.115944, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, 1.36014, 0)
bones/0/rotation = Quaternion(0, 1.19209e-07, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "Leg.L"
bones/1/parent = 0
bones/1/rest = Transform3D(3.57628e-07, 0, -1, 0, -1, 0, -1, 0, -3.57628e-07, -3.41302e-08, -0.00195539, 0.143152)
bones/1/enabled = true
bones/1/position = Vector3(-3.41302e-08, -0.00195539, 0.143152)
bones/1/rotation = Quaternion(0.673366, -0.215821, -0.673366, -0.215821)
bones/1/scale = Vector3(1, 1, 1)
bones/2/name = "Shin.L"
bones/2/parent = 1
bones/2/rest = Transform3D(0.999665, -0.0258959, 3.16782e-08, 0.0258959, 0.999665, 1.95293e-09, -3.17182e-08, -1.13194e-09, 1, 0, 0.632851, 0)
bones/2/enabled = true
bones/2/position = Vector3(0, 0.632851, 0)
bones/2/rotation = Quaternion(-7.71284e-10, 1.58504e-08, 0.012949, 0.999916)
bones/2/scale = Vector3(1, 1, 1)
bones/3/name = "Leg.R"
bones/3/parent = 0
bones/3/rest = Transform3D(3.57628e-07, 0, -1, 0, -1, 0, -1, 0, -3.57628e-07, 3.8146e-08, -0.00195539, -0.159996)
bones/3/enabled = true
bones/3/position = Vector3(3.8146e-08, -0.00195539, -0.159996)
bones/3/rotation = Quaternion(0.676188, 0.206809, -0.676188, 0.206809)
bones/3/scale = Vector3(1, 1, 1)
bones/4/name = "Shin.R"
bones/4/parent = 3
bones/4/rest = Transform3D(0.999732, 0.0231701, 3.17225e-08, -0.0231701, 0.999732, -1.74828e-09, -3.17545e-08, 1.0128e-09, 1, 0, 0.632851, 4.44089e-16)
bones/4/enabled = true
bones/4/position = Vector3(0, 0.632851, 4.44089e-16)
bones/4/rotation = Quaternion(6.90316e-10, 1.58703e-08, -0.0115858, 0.999933)
bones/4/scale = Vector3(1, 1, 1)
bones/5/name = "Waist"
bones/5/parent = 0
bones/5/rest = Transform3D(1, 0, -1.42109e-14, 0, 1, 0, 1.42109e-14, 0, 1, 0, 0.0484307, 0)
bones/5/enabled = true
bones/5/position = Vector3(0, 0.0484307, 0)
bones/5/rotation = Quaternion(0, -7.10543e-15, 0, 1)
bones/5/scale = Vector3(1, 1, 1)
bones/6/name = "Torso"
bones/6/parent = 5
bones/6/rest = Transform3D(1, 0, 1.42109e-14, 0, 1, 0, -1.42109e-14, 0, 1, 0, 0.301428, 0)
bones/6/enabled = true
bones/6/position = Vector3(0, 0.301428, 0)
bones/6/rotation = Quaternion(0, 7.10543e-15, 0, 1)
bones/6/scale = Vector3(1, 1, 1)
bones/7/name = "Arm.L"
bones/7/parent = 6
bones/7/rest = Transform3D(4.76837e-07, -3.39001e-07, -1.00001, -0.0763704, -0.997079, 3.05476e-07, -0.997079, 0.0763704, -4.76841e-07, -9.79744e-08, 0.538309, 0.410935)
bones/7/enabled = true
bones/7/position = Vector3(-9.79744e-08, 0.538309, 0.410935)
bones/7/rotation = Quaternion(0.134088, 0.694277, -0.0806734, 0.70249)
bones/7/scale = Vector3(1, 1, 1.00001)
bones/8/name = "Arm.L.001"
bones/8/parent = 7
bones/8/rest = Transform3D(0.994127, 0.107521, 0.0122603, -0.10745, 0.967246, 0.229976, 0.0128685, -0.229943, 0.973119, 3.53903e-08, 0.528401, -3.77476e-15)
bones/8/enabled = true
bones/8/position = Vector3(3.53903e-08, 0.528401, -3.77476e-15)
bones/8/rotation = Quaternion(-0.115933, -0.000153322, -0.0541882, 0.991778)
bones/8/scale = Vector3(1, 1, 1)
bones/9/name = "Arm.R"
bones/9/parent = 6
bones/9/rest = Transform3D(3.15905e-06, 0.0179119, -0.999854, 0.0869819, -0.99605, -0.0178439, -0.99621, -0.0869679, -0.00156131, -0.00136278, 0.551991, -0.379397)
bones/9/enabled = true
bones/9/position = Vector3(-0.00136278, 0.551991, -0.379397)
bones/9/rotation = Quaternion(0.0729859, -0.703884, -0.0114757, -0.706462)
bones/9/scale = Vector3(1, 1, 1.00001)
bones/10/name = "Arm.R.001"
bones/10/parent = 9
bones/10/rest = Transform3D(0.988307, -0.151394, -0.0181154, 0.1523, 0.974513, 0.164709, -0.00728221, -0.165542, 0.986176, -5.22162e-10, 0.528947, 1.16415e-10)
bones/10/enabled = true
bones/10/position = Vector3(-5.22162e-10, 0.528947, 1.16415e-10)
bones/10/rotation = Quaternion(-0.0830942, -0.00272574, 0.0764122, 0.993604)
bones/10/scale = Vector3(1, 1, 1)
bones/11/name = "Head"
bones/11/parent = 6
bones/11/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.646399, 0)
bones/11/enabled = true
bones/11/position = Vector3(0, 0.646399, 0)
bones/11/rotation = Quaternion(0, 0, 0, 1)
bones/11/scale = Vector3(1, 1, 1)
bones/12/name = "Hair"
bones/12/parent = 11
bones/12/rest = Transform3D(0.176239, 0, -4.20187e-08, 0, 0.176239, 0, 4.20187e-08, 0, 0.176239, 0, 0.46666, 0)
bones/12/enabled = true
bones/12/position = Vector3(0, 0.46666, 0)
bones/12/rotation = Quaternion(0, -1.19209e-07, 0, 1)
bones/12/scale = Vector3(0.176239, 0.176239, 0.176239)

[node name="Hair" type="BoneAttachment3D" parent="MeshContainer/Armature/Skeleton3D"]
transform = Transform3D(0.176239, 0, 0, 0, 0.176239, 0, 0, 0, 0.176239, 0, 2.82306, 0)
bone_name = "Hair"
bone_idx = 12

[node name="Hair" type="MeshInstance3D" parent="MeshContainer/Armature/Skeleton3D/Hair"]
material_override = ExtResource("9_uj6yg")
mesh = ExtResource("13_80e4s")
skeleton = NodePath("")

[node name="Mesh" type="MeshInstance3D" parent="MeshContainer/Armature/Skeleton3D"]
material_override = ExtResource("9_uj6yg")
mesh = ExtResource("10_8lxbx")
skin = SubResource("Skin_0j7qo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshContainer"]
libraries = {
"": SubResource("AnimationLibrary_icehg")
}

[node name="sfx_ragdoll" type="AudioStreamPlayer3D" parent="."]
volume_db = -7.0
pitch_scale = 1.5
bus = &"SFX"
script = ExtResource("26_ex1dr")
sfx = Array[AudioStream]([ExtResource("27_stlt4"), ExtResource("28_41iav"), ExtResource("29_k2c3l")])

[node name="sfx_death" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"
script = ExtResource("26_ex1dr")
sfx = Array[AudioStream]([ExtResource("30_uffqt"), ExtResource("31_otsab"), ExtResource("32_76eov"), ExtResource("33_gduxe")])
playGlobal = true

[node name="sfx_deathscream" type="AudioStreamPlayer3D" parent="."]
volume_db = 3.0
bus = &"SFX"
script = ExtResource("26_ex1dr")
sfx = Array[AudioStream]([ExtResource("34_xe3q5"), ExtResource("35_xp2ty"), ExtResource("36_3sbbo"), ExtResource("37_3inc4"), ExtResource("38_86fnk")])
playGlobal = true

[node name="sfx_hurt_male" type="AudioStreamPlayer3D" parent="."]
volume_db = -2.0
bus = &"SFX"
script = ExtResource("26_ex1dr")
sfx = Array[AudioStream]([ExtResource("39_l8b85"), ExtResource("40_qaada"), ExtResource("41_3yye4"), ExtResource("42_0pw48")])
limitOne = true

[node name="sfx_hurt_female" type="AudioStreamPlayer3D" parent="."]
volume_db = -2.0
bus = &"SFX"
script = ExtResource("26_ex1dr")
sfx = Array[AudioStream]([ExtResource("43_2msmt"), ExtResource("44_dvwc3"), ExtResource("45_631kg")])
limitOne = true

[node name="SquibRelease" type="Node3D" parent="."]
script = ExtResource("30_0f8pe")
squibs = {
"res://Prefabs/Breakables/Squibs/SquibFleshy01.tscn": -3,
"res://Prefabs/Breakables/Squibs/SquibFleshy02.tscn": -3,
"res://Prefabs/Breakables/Squibs/SquibFleshy03.tscn": -2,
"res://Prefabs/Breakables/Squibs/SquibFleshy04.tscn": -2
}

[connection signal="on_death" from="." to="SquibRelease" method="trigger"]
[connection signal="on_death" from="." to="sfx_death" method="play_random"]
[connection signal="on_death" from="." to="sfx_deathscream" method="play_random"]
[connection signal="state_entered" from="StateMachine/Idle" to="MeshContainer/AnimationPlayer" method="play" binds= ["TPose"]]
[connection signal="state_entered" from="StateMachine/Chase" to="MeshContainer/AnimationPlayer" method="play" binds= ["Walk"]]
[connection signal="state_entered" from="StateMachine/Ragdoll" to="sfx_ragdoll" method="play_random"]
[connection signal="timeout" from="StateMachine/Ragdoll/Timer" to="StateMachine/Ragdoll" method="_on_timer_timeout"]
[connection signal="body_entered" from="AggroRange" to="." method="aggro"]
[connection signal="body_exited" from="AggroRange" to="." method="aggro_exit"]
[connection signal="timeout" from="flee_panic_timer" to="." method="_on_flee_panic_timer_timeout"]
